--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "index.js",
   "scripts": {
-    "start": "ng start --config ./tools/development.js",
-    "build": "ng build --config ./tools/production.js",
-    "release": "npm run build"
+    "build": "node ./build/webpack build",
+    "start": "node ./build/webpack dev"
   },
   "repository": {
     "type": "git",
@@ -24,22 +23,56 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
-    "angularjs-spa-cli": "~0.3.17",
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "cross-env": "^3.2.4",
-    "csso": "1.7.1",
-    "linklocal": "^2.8.0",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "fs-extra": "2.1.2",
-    "md5": "2.2.1",
-    "rimraf": "^2.6.1",
-    "uglify-js": "2.8.16",
-    "webpack": "^2.2.1"
+    "jquery": "3.2.1"
+  },
+  "devDependencies": {
+    "angular2-template-loader": "0.6.2",
+    "autoprefixer": "6.7.7",
+    "awesome-typescript-loader": "3.1.2",
+    "babel-core": "6.24.1",
+    "babel-loader": "6.4.1",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-es2015-classes": "6.24.1",
+    "babel-plugin-transform-es2015-object-super": "6.24.1",
+    "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
+    "babel-plugin-transform-es3-property-literals": "6.22.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "chalk": "1.1.3",
+    "cheerio": "0.22.0",
+    "chunk-manifest-webpack-plugin": "1.0.0",
+    "cross-env": "4.0.0",
+    "css-loader": "0.28.0",
+    "delete": "0.3.2",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-config-airbnb-base": "11.1.3",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "6.9.0",
+    "eslint-config-eslint": "4.0.0",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-import": "2.2.0",
+    "express": "4.15.2",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "html-loader": "0.4.5",
+    "html-webpack-include-assets-plugin": "0.0.5",
+    "html-webpack-plugin": "2.28.0",
+    "memory-fs": "0.4.1",
+    "node-sass": "4.5.2",
+    "postcss-loader": "1.3.3",
+    "progress-bar-webpack-plugin": "1.9.3",
+    "resolve-url-loader": "2.0.2",
+    "sass-loader": "6.0.3",
+    "style-loader": "0.16.1",
+    "to-string-loader": "1.1.5",
+    "underscore": "1.8.3",
+    "url-loader": "0.5.8",
+    "webpack": "2.3.3",
+    "webpack-chunk-hash": "0.4.0",
+    "webpack-dev-middleware": "1.10.1",
+    "webpack-dev-server": "2.4.2",
+    "webpack-hot-middleware": "2.18.0",
+    "webpack-merge": "4.1.0"
   }
 }
