--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meetyou-angular-ui",
   "version": "0.0.1",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "build": "node ./build/webpack build",
     "start": "node ./build/webpack dev"
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
-    "jquery": "3.2.1"
+    "@uirouter/angularjs": "1.0.0",
+    "angular": "1.5.8"
   },
   "devDependencies": {
     "angular2-template-loader": "0.6.2",
