--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.1",
-    "angular": "^1.6.4"
+    "angular-ui-router": "0.3.1",
+    "angular": "1.5.8",
+    "jquery": "1.12.4"
   },
   "devDependencies": {
     "angular2-template-loader": "0.6.2",
