--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
-    "angular-ui-router": "0.3.1",
-    "angular": "1.5.8",
-    "jquery": "1.12.4"
+    "angular-ui-router": "^0.3.2",
+    "angular": "^1.6.4",
+    "jquery": "^1.12.4"
   },
   "devDependencies": {
     "angular2-template-loader": "0.6.2",
