--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
-    "angular-ui-router": "^0.3.2",
     "angular": "^1.6.4",
+    "angular-ui-router": "^0.3.2",
+    "clipboard": "1.6.1",
     "jquery": "^1.12.4"
   },
   "devDependencies": {
@@ -44,16 +45,17 @@
     "cheerio": "0.22.0",
     "chunk-manifest-webpack-plugin": "1.0.0",
     "cross-env": "4.0.0",
+    "css": "2.2.1",
     "css-loader": "0.28.0",
     "delete": "0.3.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-config-airbnb-base": "11.1.3",
-    "eslint-plugin-jsx-a11y": "3.0.2",
-    "eslint-plugin-react": "6.9.0",
     "eslint-config-eslint": "4.0.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "6.9.0",
     "express": "4.15.2",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
