--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "build:dll": "node ./build/webpack dll",
     "start": "node ./build/webpack dev"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://youpinyao@github.com/youpinyao/meetyou-angular-ui.git"
-  },
+  "repository": "git+https://youpinyao@github.com/youpinyao/meetyou-angular-ui.git",
   "keywords": [
     "angular",
     "toolkit",
@@ -29,7 +26,7 @@
     "angular-sanitize": "^1.6.4",
     "angular-ui-router": "^0.3.2",
     "clipboard": "^1.6.1",
-    "jquery": "^1.12.4"
+    "jquery": "1.x"
   },
   "devDependencies": {
     "angular2-template-loader": "0.6.2",
@@ -63,9 +60,9 @@
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "html-loader": "0.4.5",
-    "md5": "2.2.1",
     "html-webpack-include-assets-plugin": "0.0.5",
     "html-webpack-plugin": "2.28.0",
+    "md5": "2.2.1",
     "memory-fs": "0.4.1",
     "node-sass": "4.5.2",
     "postcss-loader": "1.3.3",
