--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "angular-sanitize": "^1.6.4",
     "angular-ui-router": "^0.3.2",
     "clipboard": "^1.6.1",
-    "jquery": "1.x"
+    "jquery": "^1.12.4"
   },
   "devDependencies": {
     "angular2-template-loader": "0.6.2",
