--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meetyou-angular-ui",
   "version": "0.0.1",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
-  "main": "./lib/meetyou.angular.ui.min.js",
+  "main": "./dist/meetyou.angular.ui.min.js",
   "scripts": {
     "build": "node ./build/webpack build",
     "start": "node ./build/webpack dev"
