--- a/.editorconfig
+++ b/.editorconfig
@@ -7,13 +7,16 @@ end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
-max_line_length = 80
+max_line_length = 150
 trim_trailing_whitespace = true
 
 [*.md]
-indent_size = 4
+indent_size = 2
 max_line_length = 0
 trim_trailing_whitespace = false
+
+[*.scss]
+indent_size = 2
 
 [COMMIT_EDITMSG]
 max_line_length = 0
