--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
-  "main": "./dist/meetyou.angular.ui.min.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "node ./build/webpack build",
-    "start": "node ./build/webpack dev"
+    "start": "node ./build/webpack dev",
+    "serve": "nodemon app.js"
   },
   "repository": "git+https://youpinyao@github.com/youpinyao/meetyou-angular-ui.git",
   "keywords": [
@@ -20,6 +21,14 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
+    "body-parser": "1.13.2",
+    "compression": "^1.5.2",
+    "cookie-parser": "1.3.5",
+    "debug": "2.2.0",
+    "es6-promise": "^3.1.2",
+    "express": "^4.14.0"
+  },
+  "devDependencies": {
     "angular": "^1.6.4",
     "angular-datepicker-custom": "2.1.5",
     "angular-file-upload": "2.5.0",
@@ -34,9 +43,7 @@
     "moment": "2.18.1",
     "ng-table": "3.0.1",
     "ui-select": "0.19.8",
-    "uuid": "3.0.1"
-  },
-  "devDependencies": {
+    "uuid": "3.0.1",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "6.7.7",
     "awesome-typescript-loader": "3.1.2",
