--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "src/index.js",
   "scripts": {
@@ -35,15 +35,6 @@
     "angular-sanitize": "^1.6.4",
     "angular-ui-router": "^0.3.2",
     "angular-validation": "1.4.4",
-    "clipboard": "^1.6.1",
-    "debounce": "1.0.2",
-    "jquery": "^1.12.4",
-    "jquery-date-range-picker": "^1.0.0",
-    "lightgallery.js": "1.0.1",
-    "moment": "2.18.1",
-    "ng-table": "3.0.1",
-    "ui-select": "0.19.8",
-    "uuid": "3.0.1",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "6.7.7",
     "awesome-typescript-loader": "3.1.2",
@@ -54,14 +45,17 @@
     "babel-plugin-transform-es2015-object-super": "6.24.1",
     "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
     "babel-plugin-transform-es3-property-literals": "6.22.0",
+    "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "chalk": "1.1.3",
     "cheerio": "0.22.0",
     "chunk-manifest-webpack-plugin": "1.0.0",
+    "clipboard": "^1.6.1",
     "cross-env": "4.0.0",
     "css": "2.2.1",
     "css-loader": "0.28.0",
+    "debounce": "1.0.2",
     "delete": "0.3.2",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
@@ -78,8 +72,13 @@
     "html-loader": "0.4.5",
     "html-webpack-include-assets-plugin": "0.0.5",
     "html-webpack-plugin": "2.28.0",
+    "jquery": "^1.12.4",
+    "jquery-date-range-picker": "^1.0.0",
+    "lightgallery.js": "1.0.1",
     "md5": "2.2.1",
     "memory-fs": "0.4.1",
+    "moment": "2.18.1",
+    "ng-table": "3.0.1",
     "node-sass": "4.5.2",
     "postcss-loader": "1.3.3",
     "progress-bar-webpack-plugin": "1.9.3",
@@ -87,8 +86,10 @@
     "sass-loader": "6.0.3",
     "style-loader": "0.16.1",
     "to-string-loader": "1.1.5",
+    "ui-select": "0.19.8",
     "underscore": "1.8.3",
     "url-loader": "0.5.8",
+    "uuid": "3.0.1",
     "webpack": "2.3.3",
     "webpack-chunk-hash": "0.4.0",
     "webpack-dev-middleware": "1.10.1",
