--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
-  "main": "src/index.js",
+  "main": "dist/meetyou.angular.min.js",
+  "module": "src/index.js",
   "scripts": {
     "build": "node ./build/webpack build",
     "start": "node ./build/webpack dev",
