--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "module": "src/index.js",
   "scripts": {
     "build": "node ./build/webpack build",
     "start": "node ./build/webpack dev",
-    "serve": "nodemon app.js"
+    "dll": "node ./build/webpack dll"
   },
   "repository": "git+https://youpinyao@github.com/youpinyao/meetyou-angular-ui.git",
   "keywords": [
@@ -22,12 +22,6 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
-    "body-parser": "1.13.2",
-    "compression": "^1.5.2",
-    "cookie-parser": "1.3.5",
-    "debug": "2.2.0",
-    "es6-promise": "^3.1.2",
-    "express": "^4.14.0",
     "angular-datepicker-custom": "2.1.5",
     "angular-file-upload": "2.5.0",
     "angular-validation": "1.4.4",
