--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
     "build": "node ./build/webpack build",
-    "start": "node ./build/webpack dev",
+    "start": "node ./build/webpack dev"
   },
   "repository": "git+https://youpinyao@github.com/youpinyao/meetyou-angular-ui.git",
   "keywords": [
