--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -34,7 +34,6 @@
     "babel-polyfill": "6.23.0"
   },
   "devDependencies": {
-    "clipboard": "^1.6.1",
     "angular": "^1.6.4",
     "angular-sanitize": "^1.6.4",
     "angular-ui-router": "^0.3.2",
@@ -53,6 +52,7 @@
     "chalk": "1.1.3",
     "cheerio": "0.22.0",
     "chunk-manifest-webpack-plugin": "1.0.0",
+    "clipboard": "^1.6.1",
     "cross-env": "4.0.0",
     "css": "2.2.1",
     "css-loader": "0.28.0",
@@ -75,6 +75,7 @@
     "md5": "2.2.1",
     "memory-fs": "0.4.1",
     "node-sass": "4.5.2",
+    "postcss-import": "10.0.0",
     "postcss-loader": "1.3.3",
     "progress-bar-webpack-plugin": "1.9.3",
     "resolve-url-loader": "2.0.2",
