--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
     "build": "node ./build/webpack build",
-    "start": "node ./build/webpack dev"
+    "start": "node ./build/webpack dev",
+    "serve": "nodemon app.js"
   },
   "repository": "git+https://youpinyao@github.com/youpinyao/meetyou-angular-ui.git",
   "keywords": [
@@ -20,6 +21,12 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
+    "body-parser": "1.13.2",
+    "compression": "^1.5.2",
+    "cookie-parser": "1.3.5",
+    "debug": "2.2.0",
+    "es6-promise": "^3.1.2",
+    "express": "^4.14.0",
     "angular-datepicker-custom": "2.1.5",
     "angular-file-upload": "2.5.0",
     "angular-validation": "1.4.4",
