--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.80",
+  "version": "0.0.81",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -37,8 +37,7 @@
     "ui-select": "0.19.8",
     "jquery-date-range-picker": "^1.0.0",
     "lightgallery.js": "1.0.1",
-    "debounce": "1.0.2",
-    "babel-polyfill": "6.23.0"
+    "debounce": "1.0.2"
   },
   "devDependencies": {
     "angular": "^1.6.4",
