--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.86",
+  "version": "0.0.87",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "express": "^4.14.0",
     "angular-datepicker-custom": "2.1.7",
     "angular-file-upload": "2.5.0",
-    "angular-validation": "1.4.4",
+    "angular-validation-custom": "1.4.4",
     "uuid": "3.0.1",
     "jquery": "^1.12.4",
     "moment": "2.18.1",
