--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.126",
+  "version": "0.0.127",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -53,6 +53,7 @@
     "babel-plugin-transform-es2015-object-super": "6.24.1",
     "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
     "babel-plugin-transform-es3-property-literals": "6.22.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "chalk": "1.1.3",
