新建transfer2 非angular实现

--- a/src/components.json
+++ b/src/components.json
@@ -16,6 +16,7 @@
   "select": "./components/select",
   "treeSelect": "./components/tree-select",
   "transfer": "./components/transfer",
+  "transfer2": "./components/transfer2",
   "upload": "./components/upload",
   "lightgallery": "./components/lightgallery",
   "message": "./components/message",
