--- a/package.json
+++ b/package.json
@@ -21,23 +21,24 @@
   },
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
-    "body-parser": "1.13.2",
-    "compression": "^1.5.2",
-    "cookie-parser": "1.3.5",
-    "debug": "2.2.0",
-    "es6-promise": "^3.1.2",
-    "express": "^4.14.0",
     "angular-datepicker-custom": "2.1.10",
     "angular-file-upload": "2.5.0",
     "angular-validation-custom": "1.4.5",
-    "uuid": "3.0.1",
+    "art-template": "4.12.1",
+    "body-parser": "1.13.2",
+    "compression": "^1.5.2",
+    "cookie-parser": "1.3.5",
+    "debounce": "1.0.2",
+    "debug": "2.2.0",
+    "es6-promise": "^3.1.2",
+    "express": "^4.14.0",
     "jquery": "^1.12.4",
+    "jquery-date-range-picker": "^1.0.0",
+    "lightgallery.js": "1.0.1",
     "moment": "2.18.1",
     "ng-table": "3.0.1",
     "ui-select": "0.19.8",
-    "jquery-date-range-picker": "^1.0.0",
-    "lightgallery.js": "1.0.1",
-    "debounce": "1.0.2"
+    "uuid": "3.0.1"
   },
   "devDependencies": {
     "angular": "^1.6.4",
