--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.184",
+  "version": "0.0.185",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -40,9 +40,9 @@
     "uuid": "3.0.1"
   },
   "devDependencies": {
-    "angular": "^1.6.4",
-    "angular-sanitize": "^1.6.4",
-    "angular-ui-router": "^0.3.2",
+    "angular": "1.6.4",
+    "angular-sanitize": "1.6.4",
+    "angular-ui-router": "0.3.2",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "6.7.7",
     "awesome-typescript-loader": "3.1.2",
