--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "uuid": "3.0.1"
   },
   "devDependencies": {
-    "angular": "1.6.4",
-    "angular-sanitize": "1.6.4",
-    "angular-ui-router": "0.3.2",
+    "angular": "^1.6.4",
+    "angular-sanitize": "^1.6.4",
+    "angular-ui-router": "^0.3.2",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "6.7.7",
     "awesome-typescript-loader": "3.1.2",
