--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.198",
+  "version": "0.0.199",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/youpinyao/meetyou-angular-ui#readme",
   "dependencies": {
     "angular-datepicker-custom": "^2.1.16",
-    "angular-validation-custom": "1.4.6",
+    "angular-validation-custom": "^1.4.8",
     "art-template": "4.12.1",
     "body-parser": "1.13.2",
     "compression": "^1.5.2",
