--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.220",
+  "version": "0.0.221",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -81,7 +81,7 @@
     "html-webpack-plugin": "2.28.0",
     "md5": "2.2.1",
     "memory-fs": "0.4.1",
-    "node-sass": "4.5.2",
+    "node-sass": "^4.13.1",
     "postcss-import": "10.0.0",
     "postcss-loader": "1.3.3",
     "progress-bar-webpack-plugin": "1.9.3",
