--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.221",
+  "version": "0.0.222",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -37,7 +37,8 @@
     "moment": "2.18.1",
     "ng-table": "3.0.1",
     "ui-select": "0.19.8",
-    "uuid": "3.0.1"
+    "uuid": "3.0.1",
+    "node-sass": "^4.13.1"
   },
   "devDependencies": {
     "angular": "^1.6.4",
@@ -81,7 +82,6 @@
     "html-webpack-plugin": "2.28.0",
     "md5": "2.2.1",
     "memory-fs": "0.4.1",
-    "node-sass": "^4.13.1",
     "postcss-import": "10.0.0",
     "postcss-loader": "1.3.3",
     "progress-bar-webpack-plugin": "1.9.3",
