--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meetyou-angular-ui",
-  "version": "0.0.222",
+  "version": "0.0.223",
   "description": "Here is the Meetyou presents implementation, product development and service in the enterprise the background",
   "main": "dist/meetyou.angular.min.js",
   "scripts": {
@@ -37,10 +37,10 @@
     "moment": "2.18.1",
     "ng-table": "3.0.1",
     "ui-select": "0.19.8",
-    "uuid": "3.0.1",
-    "node-sass": "^4.13.1"
+    "uuid": "3.0.1"
   },
   "devDependencies": {
+    "node-sass": "^4.13.1",
     "angular": "^1.6.4",
     "angular-sanitize": "^1.6.4",
     "angular-ui-router": "^0.3.2",
